update personal info

--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "About"
-description: "Hey, this is Wang."
+description: "(｡･∀･)ﾉﾞ嗨, 这是我的博客."
 header-img: "images/me_b.jpg"
 ---
 
