--- a/about.html
+++ b/about.html
@@ -26,14 +26,14 @@ header-img: "images/me_b.jpg"
 
     <p></p>
     
-    <h5>Talks</h5>
+    <h5>Talks</h5> -->
 
     <ul>
-        <li><a href="https://github.com">GitHub</a></li>
+        <!-- <li><a href="https://github.com">GitHub</a></li>
         <li><a href="http://jekyll.com.cn/">jekyll</a></li>
-        <li><a href="http://huangxuan.me/">Hux</a></li> 
-        <li><a href="https://analytics.google.com/analytics">Google Analytics</a></li>
-    </ul> -->
+        <li><a href="http://huangxuan.me/">Hux</a></li>  -->
+        <li><a href="https://t.me/reading_man">在Telegram上与我通信</a></li>
+    </ul>
 </div>
 
 <!-- English Version -->
