--- a/about.html
+++ b/about.html
@@ -17,6 +17,8 @@ header-img: "images/me_b.jpg"
     <!--copied from markdown -->
     <blockquote><p>刚开始<br>
     积累ing</p></blockquote>
+    
+    <li><a href="https://t.me/reading_man">在Telegram上与我通信</a></li>
 
     <!-- <p>Hey，我是<strong>柏荧(BY)</strong>，一只iOS程序猿，现在厦门工作。</p>
 
