--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@ header-img: "images/me_b.jpg"
 <div class="zh post-container">
 
     <!--copied from markdown -->
-    <blockquote><p>刚开始<br>
+    <blockquote><p><br>
     积累ing</p></blockquote>
     
     <li><a href="https://t.me/reading_man">在Telegram上与我通信</a></li>
